--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     font-family: Montserrat,sans-serif!important;
     font-weight: 800!important;
 }
-.em-font-Montserrat-Light,.em-font-Montserrat-SemiBold {
+.em-font-Montserrat-Light {
     font-weight: 300!important;
+}
+.em-font-Montserrat-Light,.em-font-Montserrat-Regular,.em-font-Montserrat-SemiBold {
     font-family: Montserrat,sans-serif!important;
 }
 .em-font-Montserrat-SemiBold {
     font-weight: 600!important;
 }
 .em-font-Montserrat-Regular {
-    font-family: "Montserrat",sans-serif!important;
     font-weight: 400!important;
 }
 @media only screen and (max-device-width:660px),only screen and (max-width:660px) {
@@ -51,9 +52,6 @@
     }
     .em-mob-padding_bottom-25 {
         padding-bottom: 25px!important;
-    }
-    .em-mob-padding_top-0 {
-        padding-top: 0!important;
     }
     .em-mob-padding_top-15 {
         padding-top: 15px!important;
@@ -164,7 +162,7 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding-right: 40px; padding-bottom: 20px; padding-left: 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#fffbf4">
+  <td align="left" style="padding-right: 40px; padding-bottom: 20px; padding-left: 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#FFFBF4">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-64px">
@@ -227,7 +225,7 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-top: 10px; padding-right: 0px; padding-left: 0px;" class="em-mob-padding_bottom-0 em-mob-text_align-left">
   <table cellpadding="0" cellspacing="0" border="0" width="300" style="width: 300px;" class="em-mob-table_align-left">
     <tr>
-      <td align="center" valign="middle" height="41" style="background-color: #1c353b; border-radius: 50px; height: 41px;" bgcolor="#1C353B">
+      <td align="center" valign="middle" height="41" style="background-color: #af8b68; border-radius: 50px; height: 41px; border-width: 1px; border-color: #1c353b;" bgcolor="#AF8B68">
         <a href="https://start.bizon365.ru/room/socall/21062024" target="_blank" style="display: block; height: 41px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 41px; text-decoration: none; white-space: nowrap; color: #ffffff;" class="em-font-Montserrat-SemiBold">
           ССЫЛКА НА ТРАНСЛЯЦИЮ
         </a>
@@ -328,7 +326,7 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 10px 0px 30px;" class="em-mob-text_align-center em-mob-padding_bottom-0" align="center">
   <table cellpadding="0" cellspacing="0" border="0" width="280" style="width: 280px;" class="em-mob-table_align-center">
     <tr>
-      <td align="center" valign="middle" height="42" style="border-radius: 50px; height: 42px; background-color: #1c353b;" bgcolor="#1C353B">
+      <td align="center" valign="middle" height="42" style="border-radius: 50px; height: 42px; background-color: #af8b68;" bgcolor="#AF8B68">
         <a style="display: block; height: 42px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 42px; text-decoration: none; white-space: nowrap; color: #ffffff;" class="em-font-Montserrat-SemiBold" target="_blank" href="https://drive.google.com/file/d/12W-3ksJAbKnGs28GMTpQL7tuliJUOGBv/view?usp=drive_link">ПРОГРАММА МЕРОПРИЯТИЯ</a>
       </td>
     </tr></table>
@@ -340,7 +338,7 @@
   <td align="center" dir="rtl" style="padding: 30px 40px 1px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_left-20 em-mob-padding_right-20" bgcolor="#FFFBF4">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
-        <td width="180" dir="ltr" valign="middle" class="em-mob-wrap em-mob-width-100perc">
+        <td width="180" dir="ltr" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td class="em-mob-text_align-center">
   <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=65rft8ixsh8j797j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerueucdxb1o5hp1g5h991x1jp1w6bn5rh7jdm7t4i6u5wxsy7hufqcpsiqkty5ta7fdfi1xurxebozo99cr8jrwnjnjic" width="180" border="0" alt="" style="display: inline-block; width: 100%; max-width: 180px; vertical-align: middle;">
 </td></tr></table>
@@ -349,30 +347,12 @@
         <td width="380" dir="ltr" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;" class="em-mob-padding_top-10 em-mob-padding_bottom-10">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular">Участие в конференции будет особенно полезно для врачей, студентов и специалистов в области гастроэнтерологии и педиатрии.&nbsp;</div>
-</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 30px;">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular">Также приглашаются все, кто заинтересован
 в профессиональном развитии, расширении знаний в диагностике и лечении пациентов
 с воспалительными заболеваниями кишечника.&nbsp;</div>
 </td></tr></table>
 </td>
-      </tr>
-    </table>
-  </td>
-</tr><tr em="block" class="em-structure">
-  <td align="center" style="padding-right: 40px; padding-bottom: 30px; padding-left: 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_right-20 em-mob-padding_bottom-20 em-mob-padding_left-20" bgcolor="#FFFBF4">
-    <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
-      <tr>
-        <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-top: 10px; padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-0">
-  <table cellpadding="0" cellspacing="0" border="0" width="400" style="width: 400px;">
-    <tr>
-      <td align="center" valign="middle" height="41" style="background-color: #1c353b; border-radius: 50px; height: 41px;" bgcolor="#1C353B">
-        <a href="https://medrassvet.pro/aktualnye_voprosy_klinicheskoy_gastroenterologii_kaliningrad" target="_blank" style="display: block; height: 41px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 41px; text-decoration: none; white-space: nowrap; color: #ffffff;" class="em-font-Montserrat-SemiBold">
-          ЗАРЕГИСТРИРОВАТЬСЯ ДЛЯ ОЧНОГО УЧАСТИЯ
-        </a>
-      </td>
-    </tr>
-  </table>
-</td></tr></table></td>
       </tr>
     </table>
   </td>
