--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<![endif]-->
                 <table cellpadding="0" cellspacing="0" width="100%" border="0" style="max-width: 660px; min-width: 660px; width: 660px;" class="em-narrow-table">
 <tr em="block" class="em-structure">
-  <td align="center" style="padding-top: 30px; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-1 em-mob-padding_left-0">
+  <td align="center" style="padding-top: 30px; background-repeat: repeat; background-color: #ffffff;" class="em-mob-padding_top-20 em-mob-padding_right-1 em-mob-padding_left-0" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="660" valign="top" class="em-mob-wrap em-mob-width-100perc">
@@ -126,7 +126,7 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="center" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-10 em-mob-padding_right-20 em-mob-padding_left-20 em-mob-padding_bottom-15" bgcolor="#fff">
+  <td align="center" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-10 em-mob-padding_right-20 em-mob-padding_left-20 em-mob-padding_bottom-15" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc">
@@ -141,12 +141,12 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding: 30px 40px 20px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#fffbf4">
+  <td align="left" style="padding: 30px 40px 20px; background-repeat: repeat; background-color: #ffffff; border-width: 1px 0px 0px; border-top-color: #989898; border-top-style: solid;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-64px">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom" class="em-mob-width-64px"><tr><td align="left">
-  <span><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6jr7m4zkjpwmp37j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeru1xadxg4n4kqmucsf9dqsynmrbjwbpzkm194xnziso1r8xyzizomxjyu11yyaurppj1eymncbz5mj84z41pd4eb4qte" width="100" border="0" alt="Дата" style="display: block; width: 100%; max-width: 100px; vertical-align: top;"></span>
+  <span><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6tot695kfom5xp7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerub7rp1i69xdmnzj59thijxexo74dc14rpumwxnb4wnj4epr8pifcofdkf3peo75har8raqkfk8kq17z1f6ibzqfsfae" width="100" border="0" alt="Дата" style="display: block; width: 100%; max-width: 100px; vertical-align: top;"></span>
 </td></tr></table>
 </td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel"></td>
@@ -162,12 +162,12 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding-right: 40px; padding-bottom: 20px; padding-left: 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#FFFBF4">
+  <td align="left" style="padding-right: 40px; padding-bottom: 20px; padding-left: 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-10 em-mob-padding_left-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-64px">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom" class="em-mob-width-64px"><tr><td align="left">
-  <span><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6ywcuaso6413k87j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeruugnbbkzgn5okiqe73h4t7s9yo6sg4p3doupmiiwu4igdmgp15iowiosyhtkhjwku5x1y4x15t7dn7sy6nux6yrzoiw" width="100" border="0" alt="Дата" style="display: block; width: 100%; max-width: 100px; vertical-align: top;"></span>
+  <span><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=639f7kbzemb5kz7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerugmpep3mjc7wegp48uszktari5ccciq7hhu34yozwsiawp4f6y4j5ccx95zeuc7epr8raqkfk8kq1hqnpxzhcfteh1y" width="100" border="0" alt="Дата" style="display: block; width: 100%; max-width: 100px; vertical-align: top;"></span>
 </td></tr></table>
 </td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel"></td>
@@ -180,12 +180,12 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_left-20" bgcolor="#FFFFFF">
+  <td align="left" style="padding-right: 40px; padding-bottom: 30px; padding-left: 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_left-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td align="left">
-  <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6hmdq4wkyt4fzu7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeruf7u39at3zna5nwzo9ktz56b7mcmhf59hgph37yc9f3ckrhnqj4rxkwxn999q9jfaj1eymncbz5mj8twooqjoj9m4ah" width="64" border="0" alt="Место" style="display: block; width: 100%; max-width: 64px; vertical-align: top;">
+  <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6a9fbsnax81y587j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeruzrwgftpythx7rcou96amgczht65t55d6b786qfjcgxmf1ftjezy88eyqofhp7hfor8raqkfk8kq17ns687ym64oiqc" width="64" border="0" alt="Место" style="display: block; width: 100%; max-width: 64px; vertical-align: top;">
 </td></tr></table>
 </td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel"></td>
@@ -209,7 +209,7 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding: 30px 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-20 em-mob-padding_left-20" bgcolor="#FFFBF4">
+  <td align="left" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat; border-bottom: 1px solid #989898; border-top: 1px solid #989898;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-20 em-mob-padding_left-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto">
@@ -335,7 +335,7 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="center" dir="rtl" style="padding: 30px 40px 1px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_left-20 em-mob-padding_right-20" bgcolor="#FFFBF4">
+  <td align="center" dir="rtl" style="padding: 30px 40px 1px; background-color: #ffffff; background-repeat: repeat; border-width: 1px 0px; border-top-color: #989898; border-top-style: solid; border-bottom-color: #989898; border-bottom-style: solid;" class="em-mob-padding_left-20 em-mob-padding_right-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="180" dir="ltr" valign="top" class="em-mob-wrap em-mob-width-100perc">
@@ -385,21 +385,21 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="center" style="padding: 30px 40px; background-color: #fffbf4; background-repeat: repeat;" class="em-mob-padding_left-20 em-mob-padding_right-20" bgcolor="#FFFBF4">
+  <td align="center" style="padding: 30px 40px; background-color: #af8b68; background-repeat: repeat;" class="em-mob-padding_left-20 em-mob-padding_right-20" bgcolor="#AF8B68">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="180" valign="middle" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
-  <a href="http://www.spbgastro.ru" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="color: #000000; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 spbgastro.ru</strong></div></a>
+  <a href="http://www.spbgastro.ru" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 <span style="color: #ffffff;">spbgastro.ru</span></strong></div></a>
 </td></tr></table>
 </td>
         <td width="20" class="em-mob-wrap"></td>
         <td width="180" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td class="em-mob-padding_top-10 em-mob-padding_bottom-10">
-  <a href="http://www.ampta.ru" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="color: #000000; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 ampta.ru</strong></div></a>
+  <a href="http://www.ampta.ru" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 <span style="color: #ffffff;">ampta.ru</span></strong></div></a>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap"></td>
         <td width="180" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
-  <a href="https://nwga.ru/events" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="color: #000000; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 nwga.ru</strong></div></a>
+  <a href="https://nwga.ru/events" target="_blank" style="color: #000000; text-decoration: none;" new="true"><div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular" align="center"><strong>🌐 <span style="color: #ffffff;">nwga.ru</span></strong></div></a>
 </td></tr></table></td>
       </tr>
     </table>
