--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
     .em-mob-padding_left-0 {
         padding-left: 0!important;
     }
-    .em-mob-padding_bottom-15 {
-        padding-bottom: 15px!important;
-    }
     .em-mob-wrap.em-mob-wrap-cancel,.noresp-em-mob-wrap.em-mob-wrap-cancel {
         display: table-cell!important;
     }
@@ -50,26 +47,23 @@
         max-width: 64px!important;
         min-width: 64px!important;
     }
-    .em-mob-padding_bottom-25 {
-        padding-bottom: 25px!important;
-    }
-    .em-mob-padding_top-15 {
-        padding-top: 15px!important;
-    }
-    .em-mob-padding_top-10 {
-        padding-top: 10px!important;
-    }
-    .em-mob-padding_bottom-10 {
-        padding-bottom: 10px!important;
-    }
     .em-mob-table_align-center {
         margin: 0 auto!important;
     }
     .em-mob-text_align-center {
         text-align: center!important;
     }
-    .em-mob-padding_bottom-0 {
-        padding-bottom: 0!important;
+    .em-mob-width-auto {
+        width: auto!important;
+    }
+    .em-mob-padding_top-20 {
+        padding-top: 20px!important;
+    }
+    .em-mob-text_align-left {
+        text-align: left!important;
+    }
+    .em-mob-table_align-left {
+        float: left!important;
     }
     .em-mob-width-100perc {
         width: 100%!important;
@@ -78,26 +72,44 @@
     .em-mob-wrap {
         display: block!important;
     }
-    .em-mob-width-auto {
-        width: auto!important;
-    }
-    .em-mob-padding_top-20 {
-        padding-top: 20px!important;
-    }
     .em-mob-padding_right-20 {
         padding-right: 20px!important;
-    }
-    .em-mob-padding_bottom-20 {
-        padding-bottom: 20px!important;
     }
     .em-mob-padding_left-20 {
         padding-left: 20px!important;
     }
-    .em-mob-text_align-left {
-        text-align: left!important;
+    .em-show-td-mobile {
+        display: table-cell!important;
     }
-    .em-mob-table_align-left {
-        float: left!important;
+    .em-show-td-desktop {
+        display: none!important;
+    }
+    .em-mob-padding_bottom-15 {
+        padding-bottom: 15px!important;
+    }
+    .em-mob-padding_bottom-10 {
+        padding-bottom: 10px!important;
+    }
+    .em-mob-padding_bottom-0 {
+        padding-bottom: 0!important;
+    }
+    .em-mob-padding_top-15 {
+        padding-top: 15px!important;
+    }
+    .em-mob-padding_top-10 {
+        padding-top: 10px!important;
+    }
+    .em-mob-padding_top-0 {
+        padding-top: 0!important;
+    }
+    .em-mob-padding_bottom-25 {
+        padding-bottom: 25px!important;
+    }
+    .em-mob-padding_bottom-20 {
+        padding-bottom: 20px!important;
+    }
+    .em-mob-padding_bottom-21 {
+        padding-bottom: 21px!important;
     }
 }
 </style>
@@ -180,10 +192,10 @@
     </table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="left" style="padding-right: 40px; padding-bottom: 30px; padding-left: 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_left-20" bgcolor="#FFFFFF">
+  <td align="left" style="padding-right: 40px; padding-bottom: 30px; padding-left: 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_left-20 em-mob-padding_bottom-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
-        <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto">
+        <td width="64" valign="top" class="em-mob-wrap em-mob-wrap-cancel">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td align="left">
   <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6a9fbsnax81y587j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeruzrwgftpythx7rcou96amgczht65t55d6b786qfjcgxmf1ftjezy88eyqofhp7hfor8raqkfk8kq17ns687ym64oiqc" width="64" border="0" alt="Место" style="display: block; width: 100%; max-width: 64px; vertical-align: top;">
 </td></tr></table>
@@ -196,7 +208,7 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"> г. Калининград, Холидей ИНН Калининград,<br> ул. Виктора Гюго, д. 1.
 <br></div>
-</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 20px 0px 1px;" class="em-mob-padding_bottom-25">
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 20px 0px 1px;" class="em-mob-padding_bottom-25 em-show-td-desktop">
   <table cellpadding="0" cellspacing="0" border="0" width="400" style="width: 400px;" class="em-mob-table_align-center">
     <tr>
       <td align="center" valign="middle" height="41" style="border-radius: 50px; height: 41px; background-color: #1c353b;" bgcolor="#1C353B">
@@ -208,6 +220,21 @@
       </tr>
     </table>
   </td>
+</tr><tr em="block" class="em-structure">
+  <!--[if !mso]><!--><td align="center" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat; display: none;" class="em-mob-padding_left-20 em-mob-padding_right-20 em-show-td-mobile em-mob-padding_top-0 em-mob-padding_bottom-21" bgcolor="#FFFFFF">
+    <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
+      <tr>
+        <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 20px 0px 1px;" class="em-mob-padding_bottom-0 em-mob-padding_top-0">
+  <table cellpadding="0" cellspacing="0" border="0" width="400" style="width: 400px;" class="em-mob-table_align-center">
+    <tr>
+      <td align="center" valign="middle" height="41" style="border-radius: 50px; height: 41px; background-color: #1c353b;" bgcolor="#1C353B">
+        <a style="display: block; height: 41px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 41px; text-decoration: none; white-space: nowrap; color: #ffffff;" class="em-font-Montserrat-SemiBold" target="_blank" href="https://medrassvet.pro/aktualnye_voprosy_klinicheskoy_gastroenterologii_kaliningrad">ЗАРЕГИСТРИРОВАТЬСЯ ДЛЯ ОЧНОГО УЧАСТИЯ</a>
+      </td>
+    </tr>
+  </table>
+</td></tr></table></td>
+      </tr></table>
+  </td><!--<![endif]-->
 </tr><tr em="block" class="em-structure">
   <td align="left" style="padding: 30px 40px; background-color: #ffffff; background-repeat: repeat; border-bottom: 1px solid #989898; border-top: 1px solid #989898;" class="em-mob-padding_top-20 em-mob-padding_right-20 em-mob-padding_bottom-20 em-mob-padding_left-20" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
@@ -403,6 +430,13 @@
 </td></tr></table></td>
       </tr>
     </table>
+  </td>
+</tr><tr em="block" class="em-structure">
+  <td align="center" style="padding: 30px 40px;" class="em-mob-padding_left-20 em-mob-padding_right-20">
+    <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
+      <tr>
+        <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"></td>
+      </tr></table>
   </td>
 </tr>
 </table>
