--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<![endif]-->
                 <table cellpadding="0" cellspacing="0" width="100%" border="0" style="max-width: 660px; min-width: 660px; width: 660px;" class="em-narrow-table">
 <tr em="block" class="em-structure">
-  <td align="center" style="padding-top: 30px; background-repeat: repeat; background-color: #ffffff;" class="em-mob-padding_top-20 em-mob-padding_right-1 em-mob-padding_left-0" bgcolor="#FFFFFF">
+  <td align="center" style="padding-top: 30px; background-repeat: repeat; background-color: #f5f6f6;" class="em-mob-padding_top-20 em-mob-padding_right-1 em-mob-padding_left-0" bgcolor="#F5F6F6">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="660" valign="top" class="em-mob-wrap em-mob-width-100perc">
@@ -184,8 +184,12 @@
 </td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel"></td>
         <td width="346" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto">
-<table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;" align="left" valign="middle">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong>16:00 (мск)</strong> – начало мероприятия<font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
+<table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;">
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong>Начало мероприятия:<span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span><br></strong></div>
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 5px; padding-left: 0px;" align="left" valign="middle">
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Москве — <span style="font-weight: bold;">16:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;" align="left" valign="middle">
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Калининграду — <span style="font-weight: bold;">15:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
 </td></tr></table>
 </td>
       </tr>
@@ -430,13 +434,6 @@
 </td></tr></table></td>
       </tr>
     </table>
-  </td>
-</tr><tr em="block" class="em-structure">
-  <td align="center" style="padding: 30px 40px;" class="em-mob-padding_left-20 em-mob-padding_right-20">
-    <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
-      <tr>
-        <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"></td>
-      </tr></table>
   </td>
 </tr>
 </table>
