--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Второе письмо_06-07.05_новый редактор</title><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600&display=swap" em-class="em-font-Montserrat-SemiBold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400&display=swap" em-class="em-font-Montserrat-Regular"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300&display=swap" em-class="em-font-Montserrat-Light"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800&display=swap" em-class="em-font-Montserrat-ExtraBold">
+	<title>Первое письмо_21.06_новый редактор</title><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600&display=swap" em-class="em-font-Montserrat-SemiBold"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400&display=swap" em-class="em-font-Montserrat-Regular"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300&display=swap" em-class="em-font-Montserrat-Light"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800&display=swap" em-class="em-font-Montserrat-ExtraBold">
 	<style type="text/css">
 		html {
 			-webkit-text-size-adjust: none;
@@ -131,7 +131,7 @@
       <tr>
         <td width="660" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td align="center">
-  <span><a href="https://medrassvet.pro/aktualnye_voprosy_klinicheskoy_gastroenterologii_kaliningrad" target="_blank"><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=66n7k9ic7bfr537j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeru91eq1ix3dy1hyon55kidrbnyej7hc74hwp4pyu1mauukee317tzu7xz6by5fuygqn8yyhs66auhytbornktpejoaao" width="660" border="0" alt="РЕГИСТРИРУЙТЕСЬ! " style="display: block; width: 100%; max-width: 660px;"></a></span>
+  <span><a href="https://medrassvet.pro/aktualnye_voprosy_klinicheskoy_gastroenterologii_kaliningrad" target="_blank"><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6mr696izfddzmu7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerummhmujw3ewwwocz83tqgf3xgcye6btic7gi4dfwtdtwnswid8cz6op86ie6odiqiiosqwi5okg4ru1g15e1abs1nba" width="660" border="0" alt="РЕГИСТРИРУЙТЕСЬ! " style="display: block; width: 100%; max-width: 660px;"></a></span>
 </td></tr></table>
 </td>
       </tr>
@@ -187,9 +187,9 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong>Начало мероприятия:<span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span><br></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 5px; padding-left: 0px;" align="left" valign="middle">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Москве — <span style="font-weight: bold;">16:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Москве — <span style="font-weight: bold;">17:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;" align="left" valign="middle">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Калининграду — <span style="font-weight: bold;">15:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong><strong></strong>По Калининграду — <span style="font-weight: bold;">16:00</span><font face="Helvetica, Arial, sans-serif"><strong><span class="em-font-Montserrat-Light" style="font-family: Helvetica, Arial, sans-serif;"></span></strong></font><br></div>
 </td></tr></table>
 </td>
       </tr>
